--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "dependencies": {
     "babel-register": "^6.26.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "morgan": "^1.9.1"
   }
 }
